# Sentiment-Analysis

./: .RData  .Rhistory  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Sentiment-Analysis.Rproj  pyproject.toml  requirements.txt
docs/: api_documentation.md  architecture.md  eda_report.md  faq.md  pipeline_overview.md  setup_guide.md
notebooks/: 01_EDA.Rmd  01_EDA.html  01_EDA.ipynb  01_EDA.md
src/: model_training.py
src/data/.dbeaver/: .data-sources.json.bak  data-sources.json
src/visualizations/: dashboard.py
