[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = "Analysis of the sentiment about reviews of movies."
authors = ["Manuel Alejandro Matías Astorga <alejandromatiasastorga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
